# Inclusi-AI-Vitality

./: .gitignore  Inclusi-AI Vitality Demo Day.pptx  LICENSE  README.md  compose.yml  docker-compose.yml  package-lock.json
.github/workflows/: azure-static-web-apps-jolly-ocean-08946fa10.yml
backend/: .gitignore  Dockerfile  app.py  flask.dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  views.py
frontend/: Dockerfile  jsconfig.json  package-lock.json  package.json
frontend/src/app/: layout.js  page.js
frontend/src/components/: Chat.jsx
frontend/src/components/ui/: loading.jsx
